﻿2007-08-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/viewport.h, src/gui/viewport.cpp: Removed two useless popup
	related methods.
	* src/gui/debugwindow.h, src/gui/debugwindow.cpp: Use generic close
	button functionality.
	* src/particle.h, src/particleemitter.cpp, src/particle.cpp: Renamed
	Particle::mVector to Particle::mVelocity for clarity.

2007-08-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/itemshortcutcontainer.h: Fixed compiler warning.
	* src/CMakeLists.txt, src/Makefile.am: Updated source lists.
	* data/graphics/gui/CMakeLists.txt, data/graphics/gui/Makefile.am:
	Added close button and item shortcut backgrounds to files that will be
	installed.
	* src/gui/itemshortcutcontainer.cpp: Make sure mGridWidth and
	mGridHeight are initialized properly (fixes arithmetic exception in
	ItemShortcutContainer::draw).
	* src/keyboardconfig.cpp: Changed default sitting key back to 's'.
	* src/net/equipmenthandler.cpp: Removed a line that attempted to set
	the player's weapon sprite with each kind of equipment. Seems to work
	fine without as well.
	* src/gui/chat.cpp, src/utils/trim.h, src/CMakeLists.txt,
	src/Makefile.am: Added trimming of chat messages.

2007-08-22  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/sprites/chest-lightplatemail-male.png,
	data/graphics/sprites/chest-lightplatemail-female.png,
	data/graphics/items/armor-chest-lightplatemail.png,
	data/graphics/tiles/woodland_indoor_x2.png: Another color correction
	at the light platemail (looks more metalic now)
	* data/maps/new_18-1.tmx.gz, data/maps/new_19-1.tmx.gz,
	data/images/minimap_new_18-1.png, data/images/minimap_new_19-1.png:
	Removed a tree that prevented people from sitting on one of the
	benches properly. Added correct minimap to woodland village and
	surrounding.

2007-08-22  Joshua Langley  <joshlangley[at]optusnet.com.au>

	* data/graphics/gui/item_shortcut_bgr.png, src/game.cpp,
	src/gui/gui.cpp, src/gui/itemcontainer.cpp,